styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');

body {
    font-family: 'Montserrat', sans-serif;

   
    
}
nav {
    display: flex;
    flex-direction: row-reverse;
    background-color: #38384d;
    justify-content: right;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
   
}

nav a {
    color:white
}


.menu {
	position: fixed;
	top: 40;
	right: 0;
	list-style-type: none;
	margin: 0;
	padding: 0;
	background: #f7f7f7;
	z-index: 10;
	overflow: hidden;
	box-shadow: 2px 0 20px rgba(0, 0, 0, 0.26);
}
.menu li a {
	display: block;
	text-decoration: none;
	text-align: center;
	width: 12rem;
	padding: 1rem;
	color: #72739f;
	position: relative;
	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
	transition: background 0.5s ease-in-out;
}

.menu li a:hover,
.menu li:first-child a {
	background: #38384d;
	color: #fff;
}

/* uncomment this
li a.menu-item {
	display: none;
} */

li a.open {
	display: flex;
}

.close::before {
	content: "❌ ";
}

/* This is where it starts */

main {
    max-width: 760px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    margin: 0 auto;
    justify-content: center;
    align-items: center;
    padding-top:30px;
    padding-bottom: 30px;
   
    
   
}

#my-pic {
    border-radius: 5px;
    box-shadow: 5px 5px 15px black;
    height: 215px;
    width: 180px;
    

}



/* 
li a.menu-item {
	display: none;
}

li a.open {
	display: flex;
} */



#my-name {
    margin: auto;
    padding-right: 190px;
}



/* .menu-item {
    
    align-items: center;
    justify-content: center;
    color: white;
    margin-top: 0px;
 
    display: flex;
    
   
} */








/* #search {
    color:white;
    margin-right: 45px;
}



#plan {
    color: white;
    margin-right: 45px;
}

#about {
    margin-right: 45px;
} */

#learning-activities {
    grid-column: 1/2;
    grid-row: 1/3;
}

#project {
    grid-column: 2/3;
    grid-row: 1/2;
}

#information {
    grid-column: 2/3;
    grid-row: 2/3;
}

.card {
    box-shadow: 5px 5px 15px;
    border-radius: 35px 20px 20px 10px;
    text-align: left;
    margin:10px;
    background-color: lightgrey;
}

.card p {
    padding-left: 15px;
    padding-bottom: 5px;
}


.card h3 {
    background-color: #38384d;
    color:white;
    border-radius: 20px 20px 0 0;
    /* box-shadow: 5px 5px 15px; */
    padding: 10px;
    width: 300px;
    text-align: center;
    
}

section {
    max-width: 320px;
}



#main-h2 {
    margin:0 auto;
    text-align: center;
    padding-top: 20px;
  
}




a {
    color:black;
}

header {
    display: flex;
    padding: 1rem;
    background-color: lightgrey;
   
   
    }
    
  

ul {
    list-style-type: none;
}

footer {
    background-color: #38384d;
    color:white;
    text-align: center;
    padding: 0.5rem;
    bottom: 0;
    width: 100%;
   
   
   
}

